--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="str_device">Device ID : </string>
     <string name="str_alert">Alarm when alcohol is high</string>
     <string name="str_emercall">Emergency call when alcohol is high</string>
+    <string name="str_signout">Sign Out</string>
 </resources>
